@@ -1,3 +1,6 @@
+[B]Version 1.1.3 - 5 Mar 2017[/B]
+- Andhra Watch new scraper
+
 [B]Version 1.1.2 - 2 Mar 2017[/B]
 - Add APKLand VOD
 
